--- a/ctc/CTC.ipynb
+++ b/ctc/CTC.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "\n",
     "# 1. 算法\n",
-    "这里大体根据 Alexs 的开山之作[1]，讨论 CTC 的算法原理，并基于 numpy 从零实现 CTC 的推理及训练算法。\n",
+    "这里大体根据 Alex Grave 的开山之作[1]，讨论 CTC 的算法原理，并基于 numpy 从零实现 CTC 的推理及训练算法。\n",
     "\n",
     "## 1.1 序列问题形式化。\n",
     "序列问题可以形式化为如下函数：\n",
@@ -26,7 +26,7 @@
     "网络输出为：$y = N_w(x)$，其中，$y_k^t$ $t$ 表示时刻第 $k$ 项的概率。\n",
     "\n",
     "![](https://distill.pub/2017/ctc/assets/full_collapse_from_audio.svg)\n",
-    "**图？. 序列建模【[src](https://distill.pub/2017/ctc/)】**\n",
+    "**图1. 序列建模【[src](https://distill.pub/2017/ctc/)】**\n",
     "\n",
     "\n",
     "虽然并没为限定 $N_w$ 具体形式，下面为假设其了某种神经网络（e.g. RNN）。\n",
@@ -180,14 +180,14 @@
     "### 1.4.1 Case 2\n",
     "递归公式中 case 2 是一般的情形。如图所示，$t$ 时刻字符为 $s$ 为 blank 时，它可能由于两种情况扩展而来：1）重复上一字符，即上个字符也是 a，2）字符发生转换，即上个字符是非 a 的字符。第二种情况又分为两种情形，2.1）上一字符是 blank；2.2）a 由非 blank 字符直接跳转而来（$B$） 操作中， blank 最终会被去掉，因此 blank 并不是必须的）。\n",
     "![](https://distill.pub/2017/ctc/assets/cost_regular.svg)\n",
-    "**图？. 【[src](https://distill.pub/2017/ctc/)】**\n",
+    "**图2. 前向算法 Case 2 示例【[src](https://distill.pub/2017/ctc/)】**\n",
     "\n",
     "### 1.4.2 Case 1\n",
     "递归公式 case 1 是特殊的情形。\n",
     "如图所示，$t$ 时刻字符为 $s$ 为 blank 时，它只能由于两种情况扩展而来：1）重复上一字符，即上个字符也是 blank，2）字符发生转换，即上个字符是非 blank 字符。$t$ 时刻字符为 $s$ 为非 blank 时，类似于 case 2，但是这时两个相同字符之间的 blank 不能省略（否则无法区分\"aa\"和\"a\"），因此，也只有两种跳转情况。\n",
     "\n",
     "![](https://distill.pub/2017/ctc/assets/cost_no_skip.svg)\n",
-    "**图？. 【[src](https://distill.pub/2017/ctc/)】**\n",
+    "**图3. 前向算法 Case 1 【[src](https://distill.pub/2017/ctc/)】**\n",
     "\n",
     "我们可以利用动态规划计算所有 $\\alpha$ 的值，算法时间和空间复杂度为 $O(T * L)$。\n",
     "\n",
@@ -605,7 +605,7 @@
    "source": [
     "def gradient_logits_naive(y, labels):\n",
     "    '''\n",
-    "    gradient by backpropgation\n",
+    "    gradient by back propagation\n",
     "    '''\n",
     "    y_grad = gradient(y, labels)\n",
     "    \n",
@@ -624,18 +624,15 @@
     "    beta = backward(y, labels)\n",
     "    p = alpha[-1, -1] + alpha[-1, -2]\n",
     "    \n",
-    "    grad = np.zeros([T, V])\n",
+    "    u_grad = np.zeros([T, V])\n",
     "    for t in range(T):\n",
     "        for s in range(V):\n",
     "            lab = [i for i, c in enumerate(labels) if c == s]\n",
     "            for i in lab:\n",
-    "                grad[t, s] += alpha[t, i] * beta[t, i] \n",
-    "            grad[t, s] = grad[t, s] / y[t, s] / p\n",
+    "                u_grad[t, s] += alpha[t, i] * beta[t, i] \n",
+    "            u_grad[t, s] /= y[t, s] * p\n",
     "                \n",
-    "    grad -= y\n",
-    "    return grad\n",
-    "    \n",
-    "    \n",
+    "    u_grad -= y\n",
     "    return u_grad\n",
     "    \n",
     "grad_l = gradient_logits_naive(y, labels)\n",
@@ -1288,7 +1285,7 @@
     "\n",
     "然而，上式不存在已知的高效解法。下面介绍几种实用的近似破解码方法。\n",
     "\n",
-    "## 3.1 贪心搜索 （best path）\n",
+    "## 3.1 贪心搜索 （greedy search）\n",
     "虽然 $p(l|x)$ 难以有效的计算，但是由于 CTC 的独立性假设，对于某个具体的字符串 $\\pi$（去 blank 前），确容易计算：\n",
     "$$\n",
     "p(\\pi|x) = \\prod_{k=1}^T p(\\pi_k|x)\n",
