--- a/crf/CRF.ipynb
+++ b/crf/CRF.ipynb
@@ -280,24 +280,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  2.22673640e+08   2.55691709e+08   2.23296038e+08   2.47196311e+08\n",
-      "    3.09104234e+08]\n",
-      " [  3.35193570e+07   2.97241970e+07   3.60109028e+07   2.30593845e+07\n",
-      "    2.85460276e+07]\n",
-      " [  3.10732364e+06   2.63044619e+06   4.11747686e+06   3.23523521e+06\n",
-      "    3.84952526e+06]\n",
-      " [  3.32665741e+05   3.41459546e+05   4.75111304e+05   3.75856583e+05\n",
-      "    3.92092981e+05]\n",
-      " [  5.00577045e+04   4.74982617e+04   4.49600924e+04   5.11404121e+04\n",
-      "    4.98358252e+04]\n",
-      " [  5.12607218e+03   6.14087407e+03   4.97562865e+03   5.66824187e+03\n",
-      "    5.73024401e+03]\n",
-      " [  7.39391942e+02   5.92830408e+02   6.43990264e+02   5.38430038e+02\n",
-      "    6.58450058e+02]\n",
-      " [  5.49771223e+01   6.09662863e+01   6.83282385e+01   8.03727866e+01\n",
-      "    7.43932095e+01]\n",
-      " [  8.59855198e+00   9.03797021e+00   1.02394530e+01   6.64334111e+00\n",
-      "    6.76191475e+00]\n",
+      "[[  2.95024144e+08   2.61620644e+08   3.16953747e+08   2.02959597e+08\n",
+      "    2.51250862e+08]\n",
+      " [  2.73494359e+07   2.31521489e+07   3.62404054e+07   2.84752625e+07\n",
+      "    3.38820012e+07]\n",
+      " [  2.92799244e+06   3.00539203e+06   4.18174216e+06   3.30814155e+06\n",
+      "    3.45104724e+06]\n",
+      " [  4.40588351e+05   4.18060894e+05   3.95721271e+05   4.50117410e+05\n",
+      "    4.38635065e+05]\n",
+      " [  4.51172884e+04   5.40496888e+04   4.37931199e+04   4.98898498e+04\n",
+      "    5.04357771e+04]\n",
+      " [  6.50740169e+03   5.21859026e+03   5.66773856e+03   4.73895449e+03\n",
+      "    5.79578682e+03]\n",
+      " [  4.83173340e+02   5.36538120e+02   6.01820173e+02   7.07538756e+02\n",
+      "    6.54966046e+02]\n",
+      " [  7.60936291e+01   7.90609361e+01   9.08681883e+01   5.80503199e+01\n",
+      "    5.89976569e+01]\n",
+      " [  8.15414542e+00   7.95904764e+00   9.64664115e+00   8.69502743e+00\n",
+      "    9.41073532e+00]\n",
       " [  1.00000000e+00   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
       "    1.00000000e+00]]\n"
      ]
@@ -314,9 +314,9 @@
     "        for j in range(V):\n",
     "            '''\n",
     "            for k in range(V):\n",
-    "                beta[i, j] += beta[i + 1, k] * psi[i, j, k]\n",
+    "                beta[i, j] += beta[i + 1, k] * psi[i + 1, j, k]\n",
     "            '''\n",
-    "            beta[i, j] = np.sum(beta[i + 1, :] * psi[i, j, :])\n",
+    "            beta[i, j] = np.sum(beta[i + 1, :] * psi[i + 1, j, :])\n",
     "                \n",
     "    return beta\n",
     "\n",
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.795258   -0.13046258 -0.11393321 -0.12612794 -0.15771546]\n",
+      "[[ 0.75834232 -0.13348772 -0.16172055 -0.10355687 -0.12819671]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
@@ -430,12 +430,11 @@
      "output_type": "stream",
      "text": [
       "[0 1 4 1 3 0 0 3 3 1]\n",
-      "0.01\n",
-      "0, 0, 0, 7.95e-01, 7.58e-01, 3.69e-02\n",
-      "0, 0, 2, -1.14e-01, -1.62e-01, 4.78e-02\n",
-      "0, 0, 3, -1.26e-01, -1.04e-01, 2.26e-02\n",
-      "0, 0, 4, -1.58e-01, -1.28e-01, 2.95e-02\n",
-      "6, 2, 0, -3.25e-02, -2.12e-02, 1.12e-02\n"
+      "0.0001\n",
+      "5e-05\n",
+      "1.5e-05\n",
+      "2, 1, 2, -2.22e-02, -2.22e-02, 1.55e-05\n",
+      "4, 3, 3, -2.03e-02, -2.03e-02, 1.55e-05\n"
      ]
     }
    ],
@@ -470,7 +469,7 @@
     "seq = np.random.choice(V, m)\n",
     "print(seq)\n",
     "\n",
-    "for toleration in [1e-2]:\n",
+    "for toleration in [1e-4, 5e-5, 1.5e-5]:\n",
     "    print(toleration)\n",
     "    for i in range(m):\n",
     "        for j in range(V):\n",
@@ -589,8 +588,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.22687807128e-06\n",
-      "1.64313007645e-14\n"
+      "1.46851337579e-06\n",
+      "1.86517468137e-14\n"
      ]
     }
    ],
@@ -604,7 +603,7 @@
     "    for i in range(m - 2, -1, -1):\n",
     "        for j in range(V):\n",
     "            for k in range(V):\n",
-    "                log_beta[i, j] = logsumexp(log_beta[i, j], log_beta[i + 1, k] + log_psi[i, j, k])\n",
+    "                log_beta[i, j] = logsumexp(log_beta[i, j], log_beta[i + 1, k] + log_psi[i + 1, j, k])\n",
     "                \n",
     "    return log_beta\n",
     "\n",
@@ -633,17 +632,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.795258   -0.13046258 -0.11393321 -0.12612794 -0.15771546]\n",
+      "[[ 0.75834232 -0.13348772 -0.16172055 -0.10355687 -0.12819671]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]]\n",
-      "[[ 0.795258   -0.13046258 -0.11393321 -0.12612794 -0.15771546]\n",
+      "[[ 0.75834232 -0.13348772 -0.16172055 -0.10355687 -0.12819671]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]]\n",
-      "1.12930498286e-14\n"
+      "1.11612108444e-14\n"
      ]
     }
    ],
@@ -778,15 +777,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.21877927 -0.07238621  0.00982091  0.09403424  0.00268227  0.16970602\n",
+      "[ 0.03394788 -0.11666261  0.02592661  0.07931277  0.02549323  0.11371901\n",
       "  0.02198856]\n",
-      "[-0.60981665 -0.35102819 -0.16646914 -0.62627954  1.86952017]\n",
-      "[[-0.3357322  -0.26338473 -0.16261862 -0.27312153  0.74243095]\n",
-      " [-0.21980123 -0.28541281 -0.26073234 -0.25597992  0.87803147]\n",
-      " [-0.26955437 -0.26679122 -0.32508983 -0.18040223  0.83413031]\n",
-      " [-0.26161018 -0.16332597 -0.25395322 -0.28057706 -0.2470377 ]\n",
-      " [ 0.7318243   0.86677824  0.77848947 -0.20103536 -0.10895564]]\n",
-      "[-0.10780192 -0.08705594 -0.09323935 -0.07586051  0.90853183]\n"
+      "[-0.62291675 -0.38050215 -0.18983737 -0.65300231  1.84625859]\n",
+      "[[-0.34655117 -0.27314013 -0.16800195 -0.28352514  0.73359469]\n",
+      " [-0.22747135 -0.2967193  -0.27009443 -0.2664594   0.87349324]\n",
+      " [-0.27906702 -0.27747362 -0.33689934 -0.18786182  0.82788735]\n",
+      " [-0.2701056  -0.16940564 -0.2624276  -0.29133856 -0.25558298]\n",
+      " [ 0.72105085  0.86080584  0.76931185 -0.2103895  -0.11362927]]\n",
+      "[-0.17736447 -0.21489701 -0.20747999 -0.19735031  0.79709179]\n"
      ]
     }
    ],
@@ -883,53 +882,31 @@
      "output_type": "stream",
      "text": [
       "Check X\n",
-      "0, 6.48e-01, 4.61e-01, 4.07e-01\n",
-      "1, 6.50e-02, 6.75e-02, 3.66e-02\n",
-      "2, 5.76e-01, 5.14e-01, 1.19e-01\n",
-      "3, -3.71e-01, -3.17e-01, 1.71e-01\n",
-      "4, 5.06e-01, 4.88e-01, 3.63e-02\n",
-      "5, -2.11e-02, -6.42e-02, 6.72e-01\n",
-      "6, 2.67e-01, 4.19e-01, 3.63e-01\n",
-      "7, -5.65e-01, -4.73e-01, 1.95e-01\n",
-      "8, 2.77e-02, -4.38e-02, 1.63e+00\n",
+      "1, 6.75e-02, 6.75e-02, 5.74e-05\n",
+      "2, 5.14e-01, 5.14e-01, 1.47e-05\n",
+      "3, -3.17e-01, -3.17e-01, 1.51e-05\n",
+      "5, -6.42e-02, -6.42e-02, 7.82e-05\n",
+      "8, -4.38e-02, -4.38e-02, 1.08e-04\n",
       "Check W\n",
-      "0, -7.73e-01, -6.55e-01, 1.81e-01\n",
-      "1, -4.98e-01, -4.52e-01, 1.01e-01\n",
-      "2, -3.16e-02, -1.33e-03, 2.27e+01\n",
-      "3, 6.32e-02, 5.89e-02, 7.44e-02\n",
-      "4, 9.79e-01, 1.05e+00, 6.73e-02\n",
+      "0, -6.55e-01, -6.55e-01, 1.13e-05\n",
+      "2, -1.33e-03, -1.33e-03, 3.77e-04\n",
+      "3, 5.88e-02, 5.89e-02, 1.15e-04\n",
       "Check P\n",
-      "0, -4.55e-01, -4.51e-01, 9.66e-03\n",
-      "0, -2.76e-01, -2.70e-01, 1.99e-02\n",
-      "0, -3.81e-01, -3.80e-01, 2.87e-03\n",
-      "0, -3.01e-01, -3.02e-01, 2.86e-03\n",
-      "0, 1.59e+00, 1.61e+00, 8.79e-03\n",
-      "1, -2.13e-01, -2.11e-01, 8.42e-03\n",
-      "1, -5.47e-01, -5.37e-01, 1.88e-02\n",
-      "1, -2.67e-01, -2.67e-01, 1.56e-03\n",
-      "1, -2.34e-01, -2.35e-01, 4.32e-03\n",
-      "1, 4.49e-01, 4.68e-01, 4.00e-02\n",
-      "2, -2.96e-01, -2.93e-01, 1.20e-02\n",
-      "2, -1.54e-01, -1.50e-01, 2.13e-02\n",
-      "2, -1.73e-01, -1.72e-01, 4.20e-03\n",
-      "2, -3.48e-01, -3.48e-01, 1.15e-03\n",
-      "2, 5.26e-01, 5.43e-01, 3.23e-02\n",
-      "3, 7.03e-01, 7.07e-01, 5.85e-03\n",
-      "3, -4.10e-01, -4.00e-01, 2.50e-02\n",
-      "3, -1.92e-01, -1.90e-01, 8.07e-03\n",
-      "3, -3.29e-01, -3.28e-01, 2.41e-03\n",
-      "3, -3.75e-01, -3.60e-01, 4.03e-02\n",
-      "4, 4.14e-01, 4.18e-01, 8.04e-03\n",
-      "4, 5.76e-01, 5.83e-01, 1.24e-02\n",
-      "4, 5.47e-01, 5.47e-01, 3.60e-04\n",
-      "4, 6.88e-01, 6.86e-01, 3.11e-03\n",
-      "4, -6.88e-01, -6.66e-01, 3.35e-02\n",
+      "0, -4.50e-01, -4.51e-01, 1.03e-05\n",
+      "0, -2.70e-01, -2.70e-01, 2.53e-05\n",
+      "1, -2.11e-01, -2.11e-01, 3.13e-05\n",
+      "1, -2.35e-01, -2.35e-01, 1.80e-05\n",
+      "2, -2.93e-01, -2.93e-01, 1.76e-05\n",
+      "2, -1.50e-01, -1.50e-01, 2.15e-05\n",
+      "2, -1.72e-01, -1.72e-01, 3.40e-05\n",
+      "2, -3.48e-01, -3.48e-01, 1.02e-05\n",
+      "3, -1.90e-01, -1.90e-01, 3.10e-05\n",
+      "3, -3.60e-01, -3.60e-01, 1.78e-05\n",
+      "4, 5.47e-01, 5.47e-01, 1.50e-05\n",
       "Check S\n",
-      "0, -2.91e-01, -2.02e-01, 4.40e-01\n",
-      "1, -8.53e-02, -1.97e-01, 5.67e-01\n",
-      "2, -4.30e-02, -1.05e-01, 5.89e-01\n",
-      "3, -8.10e-02, -2.02e-01, 6.00e-01\n",
-      "4, 8.65e-01, 7.06e-01, 2.26e-01\n"
+      "0, -2.02e-01, -2.02e-01, 2.13e-05\n",
+      "1, -1.97e-01, -1.97e-01, 1.82e-05\n",
+      "2, -1.05e-01, -1.05e-01, 6.22e-05\n"
      ]
     }
    ],
@@ -1058,114 +1035,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-12-474513284093>, line 41)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-12-474513284093>\"\u001b[1;36m, line \u001b[1;32m41\u001b[0m\n\u001b[1;33m    if j == seq[i - 1] and k == seq[i]:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Pytorch CRF\n",
-    "'''\n",
-    "\n",
-    "import torch\n",
-    "from torch.autograd import Function\n",
-    "\n",
-    "class CRFF(Function):\n",
-    "    def forward(self, y_hat, y, P, S=None, E=None):\n",
-    "        log_alpha = self._crf_forward(y_hat, P, S, E)\n",
-    "        log_beta = self._crf_backward(y_hat, P, S, E)\n",
-    "        \n",
-    "        log_Z = reduce_logsumexp(log_alpha[:, -1, :], axis=-1)\n",
-    "        \n",
-    "        transition_energy = P.gather(y)  # TODO\n",
-    "        emission_energy = torch.sum(y_hat.gather(y), asix=-1)\n",
-    "        log_M = transition_energy + emition_energy\n",
-    "        \n",
-    "        self.save_for_backward(y_hat, y, P, S, E, log_alpha, log_beta, log_Z, log_M)\n",
-    "        \n",
-    "        nll = np.sum(log_Z - log_M)\n",
-    "        return nll\n",
-    "    \n",
-    "    def backward(self, output_grad):\n",
-    "        y_hat, y, P, S, E, log_alpha, log_beat, log_Z, log_M = self.saved_variables\n",
-    "        \n",
-    "        y_grad = y_hat.new(*y_hat.size())\n",
-    "        P_grad = P.new(*P.size())\n",
-    "        if S is not None:\n",
-    "            S_grad = S.new(*S.size())\n",
-    "        else:\n",
-    "            S_grad = None\n",
-    "        if E is not None:\n",
-    "            E_grad = E.new(*E.size())\n",
-    "        else:\n",
-    "            E_grad = None\n",
-    "            \n",
-    "        y_grad = torch.exp(log_alpha + log_beta - log_Z)\n",
-    "        \n",
-    "        grad[i, j, k] -= np.exp(log_alpha[i - 1, j] + log_beta[i, k] - log_Z)\n",
-    "                if j == seq[i - 1] and k == seq[i]:\n",
-    "                    grad[i, j, k] += np.exp(-log_psi[i, j, k])\n",
-    "            \n",
-    "        return y_grad, P_grad, S_grad, E_grad\n",
-    "        \n",
-    "        \n",
-    "    def _crf_forward(self, input, P, S=None, E=None):\n",
-    "        batch_size, seq_len, voc = input.shape\n",
-    "        log_alpha = input.new(batch_size, seq_len, voc).fill_(-10000)\n",
-    "        \n",
-    "        if S is not None:\n",
-    "            log_alpha[:, 0, :] = S.unsqueeze(0).expand(batch_size, voc)\n",
-    "            \n",
-    "        for t in range(seq_len):\n",
-    "            energy = P.unsqueeze(0).expand(batch_size, voc, voc)  # transmit\n",
-    "            energy += input[:, t, :].unsqueeze(1).expand(batch_size, voc, voc)  # emit\n",
-    "            \n",
-    "            log_alpha_tm1 = log_alpha[:, t - 1, :].unsequeeze(1).expand(batch_size, voc, voc)\n",
-    "            \n",
-    "            log_alpha[:, t, :] = reduce_logsumexp(log_alpha_tm1 + energy, axis=-1)\n",
-    "            \n",
-    "        if E is not None:\n",
-    "            log_alpha[:, -1, :] += logsumexp(log_alpha[:, -1, :], E.unsqueeze(0).expand(batch_size, voc))\n",
-    "\n",
-    "        nll = -reduce_logsumexp(log_alpha[:, -1, :])\n",
-    "        \n",
-    "        return log_alpha\n",
-    "\n",
-    "    def _crf_backward(self, input, P, S=None, E=None):\n",
-    "        batch_size, seq_len, voc = input.shape\n",
-    "        log_beta = input.new(batch_size, seq_len, voc).fill_(-10000)\n",
-    "        \n",
-    "        if E is not None:\n",
-    "            log_beta[:, -1, :] = E.unsqueeze(0).expand(batch_size, voc)\n",
-    "        else:\n",
-    "            log_beta[:, -1, :] = 0\n",
-    "            \n",
-    "        for t in range(seq_len - 1, -1, -1):\n",
-    "            energy = P.unsqueeze(0).expand(batch_size, voc, voc)  # transmit\n",
-    "            energy += input[:, t, :].unsqueeze(1).expand(batch_size, voc, voc)  # emit\n",
-    "            \n",
-    "            log_beta_tp1 = log_beta[:, t + 1, :].unsequeeze(1).expand(batch_size, voc, voc)\n",
-    "            \n",
-    "            log_beta[:, t, :] = reduce_logsumexp(log_beta_tp1 + energy, axis=-1)\n",
-    "            \n",
-    "        if S is not None:\n",
-    "            log_beta[:, 0, :] += logsumexp(log_beta[:, 0, :], S.unsqueeze(0).expand(batch_size, voc))\n",
-    "            \n",
-    "        return log_beta    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1182,18 +1051,10 @@
     "\n",
     "8. https://github.com/UKPLab/emnlp2017-bilstm-cnn-crf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
