fix formula typo. update crf description. update readme

--- a/crf/CRF.ipynb
+++ b/crf/CRF.ipynb
@@ -6,35 +6,32 @@
    "source": [
     "# 1. 概述\n",
     "\n",
-    "条件随机场（Conditional Random Field, CRF）本质上是概率图模型（Probabilistic Graphical Model）与区分性分类( Discriminative Classification）的一种接合，能够用来对序列分类（标注）问题进行建模。\n",
+    "条件随机场（Conditional Random Field, CRF）是概率图模型（Probabilistic Graphical Model）与区分性分类( Discriminative Classification）的一种接合，能够用来对序列分类（标注）问题进行建模。\n",
     "\n",
-    "论文 [1] 中经典的图（图1），阐释了 CRF 与其他模型之间的关系。\n",
+    "如图1，论文 [1] 阐释了 CRF 与其他模型之间的关系。\n",
     "\n",
     "![](http://ww3.sinaimg.cn/large/6cbb8645jw1en4lqd5qq3j21510p1jvn.jpg)\n",
-    "**图1.【[src](http://www.hankcs.com/nlp/segment/crf-segmentation-of-the-pure-java-implementation.html)】**\n",
+    "**图1. CRF 与 其他机器学习模型对比【[src](http://www.hankcs.com/nlp/segment/crf-segmentation-of-the-pure-java-implementation.html)】**\n",
     "\n",
     "\n",
-    "The advantage to a conditional model is that dependencies that involve only variables in x play no role in the conditional model, so that an accurate conditional model can have much simpler structure than a joint model.\n",
     "\n",
-    "![]()\n",
-    "**图2. 线性链 CRF**\n",
+    "![](https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=1645229592,3117226322&fm=27&gp=0.jpg)\n",
+    "**图2. 简单的线性链 CRF**\n",
     "\n",
-    "下面我们关注线性链条件随机场（Linear-Chain CRF）（如图2）的原理与实现。线性链 CRF 通过与双向 LSTM（Bi-LSTM）的接合，我们图3关系的更一般 CRF。 \n",
+    "本文我们重点关注输入结点独立的“线性链条件随机场”（Linear-Chain CRF）（如图2）的原理与实现。线性链 CRF 通过与双向 LSTM（Bi-LSTM）的接合，可以用来建模更一般的线性链 CRF（图3），提高模型的建模能力。\n",
     "\n",
-    "![]()\n",
-    "**图3. 线性链 CRF**"
+    "![](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1520657695107&di=5973a34b94de511772a9337ad7de11e0&imgtype=0&src=http%3A%2F%2Fs14.sinaimg.cn%2Fmw690%2F002R78Yfgy71Mv4EvH78d%26690)\n",
+    "**图3. 一般性线性链 CRF**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. 模型形式化\n",
+    "# 2.  CRF 算法\n",
     "\n",
-    "http://www.cs.columbia.edu/~mcollins/fb.pdf\n",
+    "## 2.1 模型形式化\n",
     "\n",
-    "![](https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=1645229592,3117226322&fm=27&gp=0.jpg)\n",
-    "**线性链条件随机场**\n",
     "\n",
     "给定长度为 $m$ 的序列， 以及状态集 $S$。 对于任意状态序列 $(s_1,\\cdots,s_m), s_i \\in S$, 定义其“势”（potential）如下：\n",
     "$$\n",
@@ -44,7 +41,7 @@
     "\n",
     "\n",
     "\n",
-    "根据概率图模型的因子分解理论[?]，我们有：\n",
+    "根据概率图模型的因子分解理论[1]，我们有：\n",
     "$$\n",
     "p(s_1,\\dots,s_m|x_1,\\dots, x_m) = \\frac{\\psi(s_1,\\dots, s_m) }{\\sum_{s^\\prime_1,\\dots,s^\\prime_m} \\psi(s^\\prime_1,\\dots, s^\\prime_m)}\n",
     "$$\n",
@@ -57,13 +54,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 算法\n",
-    "\n",
     "同 HMM 类似，CRF 也涉及三类基本问题：评估（计算某一序列的似然值）、解码（给定输入，寻找似然最大的序列）及训练（根据数据估计 CRF 的参数），解决这三个问题也都涉及前向算法、后向算法及 Viterbi 算法。\n",
     "\n",
     "CRF 的势函数类似于概率，只不过没有归一化，因此这里介绍的 CRF 前向算法、Viterbi 算法、后向算法，同 HMM 基本一致。\n",
     "\n",
-    "## 2.1 前向算法\n",
+    "## 2.2 前向算法\n",
     "\n",
     "定义：\n",
     "$$\n",
@@ -90,7 +85,7 @@
     "\n",
     "** 通过前向算法，我们解决了评估问题，计算和空间复杂度为 $O(m\\cdot|S|^2)$。**\n",
     "\n",
-    "> 似然的计算过程中，只涉及乘法和加法，都是可导操作。因此，只需要实现前向操作，我们就可以借具有自动梯度功能的学习库（e.g. pytorch、tensorflow）实现基于最大似然准则的训练。"
+    "> 似然的计算过程中，只涉及乘法和加法，都是可导操作。因此，只需要实现前向操作，我们就可以借具有自动梯度功能的学习库（e.g. pytorch、tensorflow）实现基于最大似然准则的训练。一个基于 pytorch 的 CRF 实现见 [repo](https://github.com/DingKe/ml-tutorial/blob/master/crf/crf.py#L39)。"
    ]
   },
   {
@@ -137,13 +132,13 @@
     "    alpha = np.zeros([m, V])\n",
     "    alpha[0] = psi[0, 0, :]  # assume psi[0, 0, :] := psi(*,s,1)\n",
     "    \n",
-    "    for i in range(1, m):\n",
-    "        for j in range(V):\n",
+    "    for t in range(1, m):\n",
+    "        for i in range(V):\n",
     "            '''\n",
     "            for k in range(V):\n",
-    "                alpha[i, j] += alpha[i - 1, k] * psi[i, k, j]\n",
+    "                alpha[t, i] += alpha[t - 1, k] * psi[t, k, i]\n",
     "            '''\n",
-    "            alpha[i, j] = np.sum(alpha[i - 1, :] * psi[i, :, j])\n",
+    "            alpha[t, i] = np.sum(alpha[t - 1, :] * psi[t, :, i])\n",
     "                \n",
     "    return alpha\n",
     "\n",
@@ -176,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Viterbi 解码\n",
+    "## 2.3 Viterbi 解码\n",
     "\n",
     "Viterbi 利用动态规划，寻找似然最大的序列。Viterbi 与前向算法非常相似，只是将求和操作替换为最大值操作。\n",
     "\n",
@@ -194,7 +189,7 @@
     "$$\n",
     "\\max \\alpha(m, s)\n",
     "$$\n",
-    "沿着前向推导的反方向，可以得到最优的路径，算法复杂度是 $O(m*|S|^2)$。"
+    "沿着前向推导的反方向，可以得到最优的路径，算法复杂度是 $O(m*|S|^2)$。demo 实现如下："
    ]
   },
   {
@@ -208,30 +203,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 4, 2, 4, 3, 0, 3, 0, 3, 1]\n",
       "[1, 4, 2, 4, 3, 0, 3, 0, 3, 1]\n"
      ]
     }
    ],
    "source": [
-    "def viterbi(psi):\n",
+    "def viterbi_1(psi):\n",
+    "    m, V, _ = psi.shape\n",
+    "    \n",
+    "    alpha = np.zeros([V])\n",
+    "    trans = np.ones([m, V]).astype('int') * -1\n",
+    "\n",
+    "    alpha[:] = psi[0, 0, :]  # assume psi[0, 0, :] := psi(*,s,1)\n",
+    "    \n",
+    "    for t in range(1, m):\n",
+    "        next_alpha = np.zeros([V])\n",
+    "        for i in range(V):\n",
+    "            tmp = alpha * psi[t, :, i]\n",
+    "            next_alpha[i] = np.max(tmp)\n",
+    "            trans[t, i] = np.argmax(tmp)\n",
+    "        alpha = next_alpha\n",
+    "            \n",
+    "    end = np.argmax(alpha)\n",
+    "    path = [end]\n",
+    "    for t in range(m - 1, 0, -1):\n",
+    "        cur = path[-1]\n",
+    "        pre = trans[t, cur]\n",
+    "        path.append(pre)\n",
+    "\n",
+    "    return path[::-1]\n",
+    "\n",
+    "def viterbi_2(psi):\n",
     "    m, V, _ = psi.shape\n",
     "    \n",
     "    alpha = np.zeros([m, V])\n",
-    "    trans = np.ones([m, V]).astype('int') * -1\n",
-    "\n",
     "    alpha[0] = psi[0, 0, :]  # assume psi[0, 0, :] := psi(*,s,1)\n",
-    "    \n",
-    "    for i in range(1, m):\n",
-    "        for j in range(V):\n",
-    "            tmp = alpha[i - 1, :] * psi[i, :, j]\n",
-    "            alpha[i, j] = np.max(tmp)\n",
-    "            trans[i, j] = np.argmax(tmp)\n",
+    "    for t in range(1, m):\n",
+    "        for i in range(V):\n",
+    "            tmp = alpha[t - 1, :] * psi[t, :, i]\n",
+    "            alpha[t, i] = np.max(tmp)\n",
     "            \n",
     "    end = np.argmax(alpha[-1])\n",
     "    path = [end]\n",
     "    for t in range(m - 1, 0, -1):\n",
     "        cur = path[-1]\n",
-    "        pre = trans[t, cur]\n",
+    "        pre = np.argmax(alpha[t - 1] * psi[t, :, cur])\n",
     "        path.append(pre)\n",
     "\n",
     "    return path[::-1]\n",
@@ -242,17 +259,19 @@
     "log_psi = np.random.random([m, V, V])\n",
     "psi = np.exp(log_psi)  # nonnegative\n",
     "\n",
-    "path = viterbi(psi)\n",
-    "print(path)"
+    "path_1 = viterbi_1(psi)\n",
+    "path_2 = viterbi_2(psi)\n",
+    "print(path_1)\n",
+    "print(path_2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 后向算法\n",
+    "## 2.4 后向算法\n",
     "\n",
-    "为了训练 CRF, 我们需要计算相应的梯度。有了高效的手动计算梯度，需要用到后向算法。\n",
+    "为了训练 CRF, 我们需要计算相应的梯度。为了手动计算梯度（这也为后续优化打开大门），需要用到后向算法。\n",
     "\n",
     "定义：\n",
     "\n",
@@ -260,7 +279,8 @@
     "\\beta(j, s) = \\sum_{s_{j+1},\\dots, s_m} \\psi(s_{j+1},\\dots, s_m|s_j=s)\n",
     "$$\n",
     "\n",
-    "其中，令 $\\beta(m, s) = 1$\n",
+    "其中，令 $\\beta(m, s) = 1$。\n",
+    "> 可以认为序列结尾存在特殊的符号。为简单起见，不讨论结尾边界的特殊性，可以都参考前向边界的处理及参见[实现](https://github.com/DingKe/ml-tutorial/blob/master/crf/crf.py#L154)。\n",
     "\n",
     "根据定义，我们有如下递归关系：\n",
     "\n",
@@ -310,13 +330,13 @@
     "    beta = np.zeros([m, V])\n",
     "    beta[-1] = 1\n",
     "    \n",
-    "    for i in range(m - 2, -1, -1):\n",
-    "        for j in range(V):\n",
+    "    for t in range(m - 2, -1, -1):\n",
+    "        for i in range(V):\n",
     "            '''\n",
     "            for k in range(V):\n",
-    "                beta[i, j] += beta[i + 1, k] * psi[i + 1, j, k]\n",
+    "                beta[t, i] += beta[t + 1, k] * psi[t + 1, i, k]\n",
     "            '''\n",
-    "            beta[i, j] = np.sum(beta[i + 1, :] * psi[i + 1, j, :])\n",
+    "            beta[t, i] = np.sum(beta[t + 1, :] * psi[t + 1, i, :])\n",
     "                \n",
     "    return beta\n",
     "\n",
@@ -335,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4 梯度计算\n",
+    "## 2.5 梯度计算\n",
     "$$\n",
     "Z = \\sum_{s_1,\\dots,s_m} \\psi(s_1,\\dots, s_m) = \\sum_{s^\\prime_{i-1} \\in S, s^\\prime_i \\in S} \\sum_{s_{i-1}=s^\\prime_{i-1}, s_i=s^\\prime_i} \\psi(s_1,\\dots, s_m) = \\sum_{s^\\prime_{i-1} \\in S, s^\\prime_i \\in S} \\alpha(i-1, s^\\prime_{i-1}) \\cdot \\beta(i, s^\\prime_i) \\cdot \\psi (s^\\prime_{i−1}, s^\\prime_i , i) \\ \\ \\ 1 < i \\le m\n",
     "$$\n",
@@ -392,13 +412,13 @@
     "    \n",
     "    Z = np.sum(alpha[-1])\n",
     "    \n",
-    "    for k in range(1, m):\n",
+    "    for t in range(1, m):\n",
     "        for i in range(V):\n",
     "            for j in range(V):\n",
-    "                grad[k, i, j] = -alpha[k - 1, i] * beta[k, j] / Z\n",
+    "                grad[t, i, j] = -alpha[t - 1, i] * beta[t, j] / Z\n",
     "                \n",
-    "                if i == seq[k-1] and j == seq[k]:\n",
-    "                    grad[k, i, j] += 1. / psi[k, i, j]\n",
+    "                if i == seq[t - 1] and j == seq[t]:\n",
+    "                    grad[t, i, j] += 1. / psi[t, i, j]\n",
     "\n",
     "    # corner cases\n",
     "    grad[0, 0, :] = -beta[0, :] / Z\n",
@@ -542,10 +562,10 @@
     "    log_alpha = np.ones([m, V]) * ninf\n",
     "    log_alpha[0] = log_psi[0, 0, :]  # assume psi[0, 0, :] := psi(*,s,1)\n",
     "    \n",
-    "    for i in range(1, m):\n",
-    "        for j in range(V):\n",
-    "            for k in range(V):\n",
-    "                log_alpha[i, k] = logsumexp(log_alpha[i, k], log_alpha[i - 1, j] + log_psi[i, j, k])\n",
+    "    for t in range(1, m):\n",
+    "        for i in range(V):\n",
+    "            for j in range(V):\n",
+    "                log_alpha[t, j] = logsumexp(log_alpha[t, j], log_alpha[t - 1, i] + log_psi[t, i, j])\n",
     "                \n",
     "    return log_alpha\n",
     "\n",
@@ -600,10 +620,10 @@
     "    log_beta = np.ones([m, V]) * ninf\n",
     "    log_beta[-1] = 0\n",
     "    \n",
-    "    for i in range(m - 2, -1, -1):\n",
-    "        for j in range(V):\n",
-    "            for k in range(V):\n",
-    "                log_beta[i, j] = logsumexp(log_beta[i, j], log_beta[i + 1, k] + log_psi[i + 1, j, k])\n",
+    "    for t in range(m - 2, -1, -1):\n",
+    "        for i in range(V):\n",
+    "            for j in range(V):\n",
+    "                log_beta[t, i] = logsumexp(log_beta[t, i], log_beta[t + 1, j] + log_psi[t + 1, i, j])\n",
     "                \n",
     "    return log_beta\n",
     "\n",
@@ -642,7 +662,7 @@
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.        ]]\n",
-      "1.11612108444e-14\n"
+      "1.11508025036e-14\n"
      ]
     }
    ],
@@ -655,12 +675,12 @@
     "    log_beta = backward_log(log_psi)\n",
     "     \n",
     "    log_Z = logsumexp(*[e for e in log_alpha[-1]])\n",
-    "    for i in range(1, m):\n",
-    "        for j in range(V):\n",
-    "            for k in range(V):\n",
-    "                grad[i, j, k] -= np.exp(log_alpha[i - 1, j] + log_beta[i, k] - log_Z)\n",
-    "                if j == seq[i - 1] and k == seq[i]:\n",
-    "                    grad[i, j, k] += np.exp(-log_psi[i, j, k])\n",
+    "    for t in range(1, m):\n",
+    "        for i in range(V):\n",
+    "            for j in range(V):\n",
+    "                grad[t, i, j] -= np.exp(log_alpha[t - 1, i] + log_beta[t, j] - log_Z)\n",
+    "                if i == seq[t - 1] and j == seq[t]:\n",
+    "                    grad[t, i, j] += np.exp(-log_psi[t, i, j])\n",
     "\n",
     "    # corner cases\n",
     "    grad[0, 0, :] -= np.exp(log_beta[0, :] - log_Z)\n",
@@ -681,6 +701,21 @@
     "print(grad_1[0, :, :])\n",
     "print(grad_2[0, :, :])\n",
     "print(np.sum(np.abs(grad_1 - grad_2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 log 域， 我们一般直接计算目标函数相对与 $\\ln\\psi$ 的梯度计算公式如下：\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\ln p(s_1,\\dots,s_m|x_1,\\dots, x_m)}{\\partial \\ln \\psi^k_{s^\\prime, s}}  =\n",
+    "\\frac{\\partial \\ln p(s_1,\\dots,s_m|x_1,\\dots, x_m)}{\\partial \\psi^k_{s^\\prime, s}} \\cdot \\frac{\\partial \\psi^k_{s^\\prime, s}}{\\partial \\ln \\psi^k_{s^\\prime, s}} = \\delta_{s^\\prime = s_{k-1} \\& s = s_k} - \\exp(\\ln\\alpha(k-1, s^\\prime) + \\ln \\beta(k, s) - \\ln Z + \\ln\\psi^k_{s^\\prime, s})\n",
+    "$$\n",
+    "\n",
+    "只需将上面的 grad_log 稍做改动即可，不再赘述。"
    ]
   },
   {
@@ -803,13 +838,13 @@
     "        # transmit\n",
     "        log_psi[0, 0, i] += x[0] * W[i]\n",
     "        \n",
-    "    for k in range(1, m):\n",
+    "    for t in range(1, m):\n",
     "        for i in range(V):\n",
     "            for j in range(V):\n",
     "                # emit\n",
-    "                log_psi[k, i, j] += x[k] * W[j]\n",
+    "                log_psi[t, i, j] += x[t] * W[j]\n",
     "                # transmit\n",
-    "                log_psi[k, i, j] += P[i, j]\n",
+    "                log_psi[t, i, j] += P[i, j]\n",
     "    \n",
     "    return log_psi   \n",
     "\n",
@@ -835,14 +870,14 @@
     "        grad_W[i] += grad_log_psi[0, 0, i] * x[0]\n",
     "        grad_x[0] += grad_log_psi[0, 0, i] * W[i]\n",
     "        \n",
-    "    for k in range(1, m):\n",
+    "    for t in range(1, m):\n",
     "        for i in range(V):\n",
     "            for j in range(V):\n",
     "                # emit\n",
-    "                grad_W[j] += grad_log_psi[k, i, j] * x[k]\n",
-    "                grad_x[k] += grad_log_psi[k, i, j] * W[j]\n",
+    "                grad_W[j] += grad_log_psi[t, i, j] * x[t]\n",
+    "                grad_x[t] += grad_log_psi[t, i, j] * W[j]\n",
     "                # transmit\n",
-    "                grad_P[i, j] += grad_log_psi[k, i, j]\n",
+    "                grad_P[i, j] += grad_log_psi[t, i, j]\n",
     "    \n",
     "    return grad_x, grad_W, grad_P, grad_S\n",
     "    \n",
@@ -1028,10 +1063,11 @@
     "\n",
     "基本模型如下：\n",
     "![](https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=2428423495,1906169408&fm=27&gp=0.jpg)\n",
+    "**图4. Bi-LSTM CRF 模型**\n",
     "\n",
-    "Bi-LSTM 对整个输入序列进行特征提取和建模，输出发射。转移势能用另外的 $P$ 表示，作为 CRF 自身的参数。相对于常规的目标函数，CRF 是带参数的训练准则。\n",
+    "Bi-LSTM 对整个输入序列进行特征提取和建模，用非线性的模型建模发射得分；转移得分用另外的 $P$ 表示，作为 CRF 自身的参数。相对于常规的用于神经网络训练的目标函数，CRF 是带参数的损失函数。\n",
     "\n",
-    "对于序列的开头和结尾，可以使用额外的参数，添加。"
+    "基于 pytorch 的 CRFLoss 实现见 [repo](https://github.com/DingKe/ml-tutorial/blob/master/crf/crf.py) 以及[3, 4]，BiLSTM + CRF 的实现应用见[8]。"
    ]
   },
   {
@@ -1040,7 +1076,6 @@
    "source": [
     "# References\n",
     "\n",
-    "## CRF\n",
     "1. Sutton and McCuallum. [An Introduction to Conditional Random Fields](http://homepages.inf.ed.ac.uk/csutton/publications/crftut-fnt.pdf).\n",
     "2. Michael Collins.[The Forward-Backward Algorithm](http://www.cs.columbia.edu/~mcollins/fb.pdf).\n",
     "3. [Pytorch CRF Forward and Viterbi Implementation](http://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html).\n",
@@ -1048,8 +1083,7 @@
     "5. Collobert. [Deep Learning for Efficient Discriminative Parsing](http://ronan.collobert.com/pub/matos/2011_parsing_aistats.pdf).\n",
     "6. Collobert et al. [Natural Language Processing (Almost) from Scratch](http://ronan.collobert.com/pub/matos/2011_nlp_jmlr.pdf).\n",
     "7. Huang et al. [Bidirectional LSTM-CRF Models for Sequence Tagging](https://arxiv.org/abs/1508.01991).\n",
-    "\n",
-    "8. https://github.com/UKPLab/emnlp2017-bilstm-cnn-crf"
+    "8. [Bi-LSTM-CRF for NLP](https://github.com/UKPLab/emnlp2017-bilstm-cnn-crf)."
    ]
   }
  ],
