--- a/ctc/CTC.ipynb
+++ b/ctc/CTC.ipynb
@@ -598,7 +598,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.34961486431e-15\n"
+      "1.59941504485e-15\n"
      ]
     }
    ],
@@ -1071,7 +1071,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\log(p(l|x)) = \\sum_t^T\\log(C_t) + \\hat\\alpha_T(|l^\\prime|) + \\hat\\alpha_T(|l^\\prime|-1)\n",
+    "\\ln(p(l|x)) = \\sum_t^T\\ln(C_t) + \\ln(\\hat\\alpha_T(|l^\\prime|) + \\hat\\alpha_T(|l^\\prime|-1))\n",
     "$$"
    ]
   },
